--- a/MockupTest/MockupTest/Base.lproj/Main.storyboard
+++ b/MockupTest/MockupTest/Base.lproj/Main.storyboard
@@ -1,24 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dD1-Rm-hgK">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Splash View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SplashViewController" customModule="MockupTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hI1-Sv-Alx" customClass="LottieAnimationView" customModule="Lottie">
+                                <rect key="frame" x="140.66666666666666" y="407" width="112" height="107"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="107" id="BZN-P5-GuF"/>
+                                    <constraint firstAttribute="width" constant="112" id="R7Z-EW-K5G"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="animationName" value="animationLock"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hI1-Sv-Alx" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="A8E-ny-PVW"/>
+                            <constraint firstItem="hI1-Sv-Alx" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="SZt-8x-SLz"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="m4v-qC-oXj"/>
+                    <connections>
+                        <outlet property="lottieView" destination="hI1-Sv-Alx" id="2MN-7z-bfI"/>
+                        <segue destination="Iv7-Kw-bLL" kind="show" identifier="onboard" id="aks-WK-6c6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="845" y="-518"/>
+        </scene>
+        <!--Onboard View Controller-->
+        <scene sceneID="i63-fC-EC5">
+            <objects>
+                <viewController storyboardIdentifier="onboard" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Iv7-Kw-bLL" customClass="OnboardViewController" customModule="MockupTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SQr-F9-2c4">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo 1" translatesAutoresizingMaskIntoConstraints="NO" id="opK-1e-tyu">
+                                <rect key="frame" x="115.66666666666669" y="382.66666666666669" width="162" height="156.00000000000006"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="156" id="V6Q-JL-fRb"/>
+                                    <constraint firstAttribute="width" constant="162" id="jjG-Wg-q3T"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PfP-no-4GT">
+                                <rect key="frame" x="20" y="718" width="353" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="0f9-8h-w0w"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Sign In"/>
+                                <connections>
+                                    <action selector="SignUpAction:" destination="Iv7-Kw-bLL" eventType="touchUpInside" id="T1X-Lx-Nqv"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Bx-mq-glH">
+                                <rect key="frame" x="20" y="653" width="353" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="1Dg-by-h5s"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Sign Up"/>
+                                <connections>
+                                    <action selector="signInAction:" destination="Iv7-Kw-bLL" eventType="touchUpInside" id="gIn-AJ-kgT"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="bYg-Oi-Ix5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4Bx-mq-glH" firstAttribute="leading" secondItem="bYg-Oi-Ix5" secondAttribute="leading" constant="20" id="BP9-kQ-JyJ"/>
+                            <constraint firstItem="bYg-Oi-Ix5" firstAttribute="trailing" secondItem="PfP-no-4GT" secondAttribute="trailing" constant="20" id="Fb4-Tk-QhY"/>
+                            <constraint firstItem="PfP-no-4GT" firstAttribute="leading" secondItem="bYg-Oi-Ix5" secondAttribute="leading" constant="20" id="Ris-gq-4cJ"/>
+                            <constraint firstItem="opK-1e-tyu" firstAttribute="centerY" secondItem="bYg-Oi-Ix5" secondAttribute="centerY" id="i3B-hQ-Krv"/>
+                            <constraint firstItem="bYg-Oi-Ix5" firstAttribute="trailing" secondItem="4Bx-mq-glH" secondAttribute="trailing" constant="20" id="iQ2-mO-LAG"/>
+                            <constraint firstItem="PfP-no-4GT" firstAttribute="top" secondItem="4Bx-mq-glH" secondAttribute="bottom" constant="15" id="k0Y-C0-gEM"/>
+                            <constraint firstItem="bYg-Oi-Ix5" firstAttribute="bottom" secondItem="PfP-no-4GT" secondAttribute="bottom" constant="50" id="vMZ-Pi-hwg"/>
+                            <constraint firstItem="opK-1e-tyu" firstAttribute="centerX" secondItem="bYg-Oi-Ix5" secondAttribute="centerX" id="zcC-Nh-Du2"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="nPV-C0-v0p"/>
+                    <connections>
+                        <outlet property="signInButton" destination="PfP-no-4GT" id="1yh-Gy-elw"/>
+                        <outlet property="signUpButton" destination="4Bx-mq-glH" id="brR-Xk-0K7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bGI-6P-MBx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1693.8931297709923" y="-518.30985915492965"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JOF-lD-lAl">
+            <objects>
+                <navigationController id="dD1-Rm-hgK" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="LP6-ok-0K6">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="dNn-T9-yB4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Imr-ev-uGh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="27" y="-518"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo 1" width="162" height="156"/>
+    </resources>
 </document>
