--- a/MockupTest/MockupTest/View/SubView/SignInView.xib
+++ b/MockupTest/MockupTest/View/SubView/SignInView.xib
@@ -16,8 +16,9 @@
                 <outlet property="emailTextField" destination="8Ck-iz-Qhj" id="RwI-gY-MC3"/>
                 <outlet property="googleView" destination="4Kx-Qc-2uO" id="Roy-ep-75h"/>
                 <outlet property="passwordBorderView" destination="zRH-li-qYR" id="min-Gj-C17"/>
+                <outlet property="passwordButton" destination="Lvc-Fe-D2a" id="AdO-tv-fmj"/>
                 <outlet property="passwordTextField" destination="DOH-Vz-E2u" id="QM1-Bc-cCO"/>
-                <outlet property="signInButton" destination="H3q-G7-kXJ" id="bR7-5C-YZO"/>
+                <outlet property="signInButton" destination="H3q-G7-kXJ" id="9Fh-UK-kOg"/>
                 <outlet property="signUpLabel" destination="1Og-v8-SbR" id="jug-2K-Ahp"/>
             </connections>
         </placeholder>
@@ -122,7 +123,7 @@
                                                 <constraint firstAttribute="width" constant="20" id="mc3-4L-CHx"/>
                                             </constraints>
                                             <state key="normal" title="Button"/>
-                                            <buttonConfiguration key="configuration" style="plain" image="showPassword"/>
+                                            <buttonConfiguration key="configuration" style="plain" image="hidePassword"/>
                                             <connections>
                                                 <action selector="showPassAction:" destination="-1" eventType="touchUpInside" id="QAD-NH-bne"/>
                                             </connections>
@@ -333,8 +334,8 @@
         <image name="apple" width="20" height="23"/>
         <image name="email" width="18" height="18"/>
         <image name="google" width="23" height="24"/>
+        <image name="hidePassword" width="25" height="21"/>
         <image name="password" width="16" height="18"/>
-        <image name="showPassword" width="26" height="26"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
